L11 DeViSE notebook - add notes and code comments

--- a/courses/dl2/devise.ipynb
+++ b/courses/dl2/devise.ipynb
@@ -917,6 +917,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create the model architecture + datasets**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
@@ -934,6 +941,9 @@
     "# transformers of images for training\n",
     "tfms = tfms_from_model(arch, 224, transforms_side_on, max_zoom=1.1)\n",
     "\n",
+    "# we can pass all the names from imagenet + word vecs\n",
+    "# then pass the indexes\n",
+    "# continuous = True - since we are predicting vectors\n",
     "md = ImageClassifierData.from_names_and_array(PATH, images, img_vecs, val_idxs=val_idxs,\n",
     "                                              classes=None, tfms=tfms, continuous=True, bs=256)"
    ]
@@ -970,6 +980,14 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "md.c     - pass number of classes to the c argument (size of the last layer)\n",
+    "is_multi - not multiclass\n",
+    "is_reg   - is regression\n",
+    "xtra_fc  - extra fully connected layers\n",
+    "ps       - how much dropout do you want?\n",
+    "*note no softmax\n",
+    "\"\"\"\n",
     "models = ConvnetBuilder(arch, md.c, is_multi=False, is_reg=True, xtra_fc=[1024], ps=[0.2, 0.2])\n",
     "\n",
     "learn = ConvLearner(md, models, precompute=True)\n",
@@ -982,10 +1000,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loss function - L1 loss is the difference\n",
+    "# but since we are doing high-dimensional vectors, most of the items\n",
+    "# are on the outside and the distance metric isn't the best metric\n",
     "def cos_loss(inp, targ):\n",
     "    return 1 - F.cosine_similarity(inp, targ).mean()\n",
     "\n",
     "learn.crit = cos_loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Train the model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training duration ~1 hour."
    ]
   },
   {
@@ -1056,6 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train with precompute = True to cut down on training time\n",
     "learn.precompute = True"
    ]
   },
@@ -1319,6 +1355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's take a look at some of the pictures**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 157,
    "metadata": {},
@@ -1382,6 +1425,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Search 300D vector, what are the closest neighbors?\n",
+    "\n",
     "There is an amazing almost unknown library called NMSLib that does that incredibly fast. The library uses multi-threading and is absolutely fantastic. You can install from pip (`pip install nmslib`) and it just works."
    ]
   },
@@ -1528,6 +1573,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if we now bring in WordNet."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 204,
    "metadata": {},
@@ -1664,6 +1716,9 @@
    "outputs": [],
    "source": [
     "def text2img(vec):\n",
+    "    \"\"\"\n",
+    "    Pull images who's vector is close to our input vector (vec)\n",
+    "    \"\"\"\n",
     "    # get indices and distances\n",
     "    idxs, dists = get_knn(nn_predwv, vec)\n",
     "    im_res = [open_image(PATH / md.val_ds.fnames[i]) for i in idxs[:3]]\n",
@@ -1688,8 +1743,8 @@
    ],
    "source": [
     "# en_vecd is of type dict. i.e { 'sink': 300-dim word vector }\n",
-    "vec = en_vecd['boat']\n",
-    "text2img(vec)"
+    "vec = en_vecd['boat'] # get the vector for boat\n",
+    "text2img(vec) # pull images who's vector is close to our 'boat' vector"
    ]
   },
   {
