L12 darknet notebook - network from scratch

--- a/courses/dl2/cifar10-darknet.ipynb
+++ b/courses/dl2/cifar10-darknet.ipynb
@@ -90,12 +90,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute CIFAR10 dataset stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./cifar10/cifar-10-python.tar.gz\n",
+      "[0.4914  0.48216 0.44653]\n",
+      "[0.24703 0.24349 0.26159]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "# ToTensor() converts image, whose elements ar in the range 0-255 to 0-1\n",
+    "train_transform = transforms.Compose([transforms.ToTensor()])\n",
+    "train_set = torchvision.datasets.CIFAR10(root='./cifar10', train=True, download=True, transform=train_transform)\n",
+    "# train_set.train_data returns numpy ndarray\n",
+    "# train_set.train_data.shape returns (50000, 32, 32, 3)\n",
+    "print(train_set.train_data.mean(axis=(0, 1, 2)) / 255)\n",
+    "print(train_set.train_data.std(axis=(0, 1, 2)) / 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%rm -rf cifar10/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build a network from scratch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')\n",
+    "\n",
+    "# these numbers are the averages and standard deviations for each channel in CIFAR10\n",
     "stats = (np.array([ 0.4914 ,  0.48216,  0.44653]), np.array([ 0.24703,  0.24349,  0.26159]))\n",
     "\n",
     "num_workers = num_cpus() // 2 # num cpus returns 4\n",
@@ -114,67 +168,89 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Architecture"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def conv_layer(ni, nf, ks=3, stride=1):\n",
+    "    return nn.Sequential(\n",
+    "        nn.Conv2d(in_channels=ni, out_channels=nf, kernel_size=ks, bias=False, stride=stride, padding=ks // 2),\n",
+    "        nn.BatchNorm2d(num_features=nf, momentum=0.01),\n",
+    "        nn.LeakyReLU(negative_slope=0.1, inplace=True)\n",
+    "    )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ResLayer(nn.Module):\n",
+    "    def __init__(self, ni):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = conv_layer(ni, ni // 2, ks=1)\n",
+    "        self.conv2 = conv_layer(ni // 2, ni, ks=3)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return x.add_(self.conv2(self.conv1(x)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Darknet(nn.Module):\n",
+    "    def make_group_layer(self, ch_in, num_blocks, stride=1):\n",
+    "        return [conv_layer(ch_in, ch_in * 2, stride=stride)\n",
+    "               ] + [(ResLayer(ch_in * 2)) for i in range(num_blocks)]\n",
+    "    \n",
+    "    def __init__(self, num_blocks, num_classes, nf=32):\n",
+    "        super().__init__()\n",
+    "        layers = [conv_layer(3, nf, ks=3, stride=1)]\n",
+    "        for i, nb in enumerate(num_blocks):\n",
+    "            layers += self.make_group_layer(nf, nb, stride=2 - (i == 1))\n",
+    "            nf *= 2\n",
+    "        layers += [nn.AdaptiveAvgPool2d(1), Flatten(), nn.Linear(nf, num_classes)]\n",
+    "        self.layers = nn.Sequential(*layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layers(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define `Darknet`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create 5 group layers: the first one will contain 1 extra ResLayer, the second will contain 2, then 4, 6, 3 and we want to start with 32 filters. The first one of ResLayers will contain 32 filters, and there’ll just be one extra ResLayer. The second one, it’s going to double the number of filters because that’s what we do each time we have a new group layer. So the second one will have 64, and then 128, 256, 512 and that’ll be it. Nearly all of the network is going to be those bunches of layers and remember, every one of those group layers also has one convolution at the start. So then all we have is before that all happens, we are going to have one convolutional layer at the very start, and at the very end we are going to do our standard adaptive average pooling, flatten, and a linear layer to create the number of classes out at the end."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "m = Darknet([1, 2, 4, 6, 3], num_classes=10, nf=32)\n",
+    "m = nn.DataParallel(m, [1, 2, 3])"
+   ]
   },
   {
    "cell_type": "code",
