Update neural style transfer notebook

--- a/courses/dl2/style-transfer.ipynb
+++ b/courses/dl2/style-transfer.ipynb
@@ -120,12 +120,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start by trying to create a bird that initially is random noise and we are going to use perceptual loss (content loss) to create something that is bird-like but it's not the particular bird."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "sz = 288"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we are going to stick it through some transforms for VGG16 model."
    ]
   },
   {
@@ -148,6 +169,27 @@
     "trn_tfms, val_tfms = tfms_from_model(vgg16, sz)\n",
     "img_tfm = val_tfms(img)\n",
     "img_tfm.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have something of 3 by 288 by 288 because PyTorch likes the channel to be first. As you can see, it's been turned into a square for us, it's been normalized to (0, 1), all that normal stuff."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to start with this picture:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are creating a random image."
    ]
   },
   {
@@ -179,6 +221,13 @@
    "source": [
     "opt_img = np.random.uniform(0, 1, size=img.shape).astype(np.float32)\n",
     "plt.imshow(opt_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying to turn this into a picture of anything is actually really hard. I found it very difficult to actually get an optimizer to get reasonable gradients that went anywhere. And just as I thought I was going to run out of time for this class and really embarrass myself, I realized the key issue is that pictures don't look like this. They have more smoothness, so I turned this into the following by blurring it a little bit:"
    ]
   },
   {
@@ -221,6 +270,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As soon as we change it to this, it immediately started training really well. A number of little tweaks you have to do to get these things to work is kind of insane, but here is a little tweak."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we start with a random image which is at least somewhat smooth. We found that my bird image had a mean of pixels that was about half of this, so we divided it by 2 just trying to make it a little bit easier for it to match (we don't know if it matters). Turn that into a variable because this image, remember, we are going to be modifying those pixels with an optimization algorithm, so anything that's involved in the loss function needs to be a variable. And specifically, it requires a gradient because we are actually updating the image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -243,12 +306,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we now have a mini batch of 1, 3 channels, 288 by 288 random noise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to use, for no particular reason, the 37th layer of VGG. If you print out the VGG network (you can just type in `m_vgg` and prints it out), you'll see that this is mid to late stage layer. So we can just grab the first 37 layers and turn it into a sequential model. So now we have a subset of VGG that will spit out some mid layer activations, and that's what the model is going to be."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "m_vgg = nn.Sequential(*children(m_vgg)[:37])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now we can take our actual bird image and we want to create a mini batch of one. Remember, if you slice in NumPy with `None`, also known as `np.newaxis`, it introduces a new unit axis in that point. Here, I want to create an axis of size 1 to say this is a mini batch of size one. So slicing with `None` just like we did here to get one unit axis at the front. Then we turn that into a variable and this one doesn't need to be updated, so we use `VV` to say you don't need gradients for this guy. So that is going to give us our target activations."
    ]
   },
   {
@@ -271,6 +355,13 @@
     "targ_t = m_vgg(VV(img_tfm[None]))\n",
     "targ_v = V(targ_t)\n",
     "targ_t.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Limited memory Broyden–Fletcher–Goldfarb–Shanno (LBFGS)"
    ]
   },
   {
@@ -303,12 +394,27 @@
     "def step(loss_fn):\n",
     "    global n_iter\n",
     "    optimizer.zero_grad()\n",
+    "    # passing in that randomly generated image — the variable of optimization image to the loss function\n",
     "    loss = loss_fn(opt_img_v)\n",
     "    loss.backward()\n",
     "    n_iter += 1\n",
     "    if n_iter % show_iter == 0:\n",
     "        print(f'Iteration: n_iter, loss: {loss.data[0]}')\n",
     "    return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see here, when you say `optimizer.step`, you actually pass in the loss function. So our loss function is to call `step` with a particular loss function which is our activation loss (`actn_loss`)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run that bunch of times and we'll print it out. And we have our bird but not the representation of it."
    ]
   },
   {
@@ -337,6 +443,13 @@
     "n_iter = 0\n",
     "while n_iter <= max_iter:\n",
     "    optimizer.step(partial(step, actn_loss))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So you can see the loss function going down. The mean squared error between the activations at layer 37 of our VGG model for our optimized image vs. the target activations, remember the target activations were the VGG applied to our bird."
    ]
   },
   {
@@ -386,6 +499,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PyTorch has these fantastic things called **hooks**. You can have forward hooks that let you plug anything you like into the forward pass of a calculation or a backward hook that lets you plug anything you like into the backward pass. So we are going to create the world's simplest forward hook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`m` is going to be the layer that I'm going to hook. When its forward method is called, it will call `self.hook_fn` which will store the output in an attribute called `features`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -405,7 +532,15 @@
    "outputs": [],
    "source": [
     "m_vgg = to_gpu(vgg16(True)).eval()\n",
+    "# set it to not trainable so we don't waste time and memory calculating gradients for it.\n",
     "set_trainable(m_vgg, False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Go through and find all the max pool layers. Go through all of the children of this module and if it's a max pool layer, let's spit out index minus 1 — so that's going to give us the layer before the max pool. In general, the layer before a max pool or stride 2 conv is a very layer. It's the most complete representation we have at that grid cell size because the very next layer is changing the grid. So that seems to us like a good place to grab the content loss from. The best most semantic, most interesting content we have at that grid size. So that's why we are going to pick those indexes."
    ]
   },
   {
@@ -425,6 +560,7 @@
     }
    ],
    "source": [
+    "# these are the indexes of the last layer before each max pool in VGG.\n",
     "block_ends = [i - 1 for i, o in enumerate(children(m_vgg))\n",
     "              if isinstance(o, nn.MaxPool2d)]\n",
     "block_ends"
@@ -436,7 +572,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# will give usthe 32nd layer of VGG as a module.\n",
     "sf = SaveFeatures(children(m_vgg)[block_ends[3]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, every time we do a forward pass on this VGG model, it's going to store the 32nd layer's output inside `sf.features`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`get_opt` give us our random image to optimize and an optimizer to optimize that image."
    ]
   },
   {
@@ -462,6 +613,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call VGG network, throwing away the answer, and then grabbing the features we stored in our `SaveFeatures` object.\n",
+    "\n",
+    "`m_vgg()` — this is how you do a forward path in PyTorch. You don't say `m_vgg.forward()`, you just use it as a callable. Using as a callable on an `nn.module` automatically calls `forward`. That's how PyTorch modules work.\n",
+    "\n",
+    "So we call it as a callable, that ends up calling our forward hook, that forward hook stores the activations in `sf.features`, and so now we have our target variable — just like before but in a much more flexible way."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -481,6 +643,15 @@
     "m_vgg(VV(img_tfm[None]))\n",
     "targ_v = V(sf.features.clone())\n",
     "targ_v.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do a forward pass, throws away the results, and and grabs `sf.features`. So that's now our 32nd layer activations which we can then do my MSE loss on.\n",
+    "\n",
+    "You might have noticed, the last loss function and this one are both multiplied by a thousand. Why are they multiplied by a thousand? The loss functions — the numbers are really low (like 10E-7) and Jeremy thought what if they weren't so low. So he multiplied them by a thousand and it started working."
    ]
   },
   {
@@ -563,6 +734,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The bird looks more bird-like. Hopefully that makes sense to you that earlier layers are getting closer to the pixels. There are more grid cells, each cell is smaller, smaller receptive field, less complex semantic features. So the earlier we get, the more it's going to look like a bird."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -576,6 +754,13 @@
    "metadata": {},
    "source": [
     "## Style match"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next thing we need to do is to **create style loss**. We've already got the loss which is how much like the bird is it. Now we need how like this painting style is it. And we are going to do nearly the same thing. We are going to **grab the activations of some layer**. Now the problem is, the activations of some layer, let's say it was a 5x5 layer (of course there are no 5x5 layers, it's 224x224, but we'll pretend). So here're some activations and we could get these activations both per the image we are optimizing and for our Van Gogh painting. Let's look at our Van Gogh painting. There it is — The Starry Night."
    ]
   },
   {
@@ -639,6 +824,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we can do that for our Van Gogh image and we can do that for our optimized image. Then we can compare the two and we would end up creating an image that has content like the painting but it's not the painting — that's not what we want. We want something with the same style but it's not the painting and doesn't have the content. So we want to throw away all of the spatial information. We are not trying to create something that has a moon here, stars here, and a church here. We don't want any of that. So how do we throw away all the special information?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -668,6 +860,13 @@
    ],
    "source": [
     "style = scale_match(img, style_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So here is our painting. We've tried to resize the painting so it's the same size as our bird picture. So that's all this is just doing. It doesn't matter too much which bit we use as long as it's got lots of the nice style in it."
    ]
   },
   {
@@ -702,12 +901,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We grab our optimizer and our random image just like before:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "opt_img_v, optimizer = get_opt()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save features for all blocks."
    ]
   },
   {
@@ -746,12 +959,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`style_img` is our Van Gogh painting. So we take my `style_img`, put it through my transformations to create our transform style image (`style_tfm`)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "style_tfm = val_tfms(style_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Turn that into a variable, put it through the forward pass of our VGG module, and now we can go through all of my `SaveFeatures` objects and grab each set of features. Notice we call `clone` because later on, if we call our VGG object again, it's going to replace those contents. So here is now an array of the activations at every `block_end` layer. And here, you can see all of those shapes:"
    ]
   },
   {
@@ -788,6 +1015,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To normalize it, we'll divide that by the number of elements (`b*c*h*w`) — it would actually be more elegant if I had said `input.numel` (number of elements) that would be the same thing. Again, this gave me tiny numbers so I multiply it by a big number to make it something more sensible."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -806,6 +1040,13 @@
    "metadata": {},
    "source": [
     "### Style loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now our style loss is to take our image to optimize, throw it through VGG forward pass, grab an array of the features in all of the `SaveFeatures` objects, and then call our Gram MSE loss on every one of those layers. And that's going to give us an array and then we just add them up. Now you could add them up with different weightings, you could add up subsets, or whatever. In this case, we are just grabbing all of them."
    ]
   },
   {
@@ -850,6 +1091,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And here we have a random image in the style of Van Gogh."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
@@ -889,8 +1137,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We added this `SaveFeatures.close` which just calls `self.hook.remove()`. Remember, we stored the hook as `self.hook` so `hook.remove()` gets rid of it. It's a good idea to get rid of it because otherwise you can potentially just keep using memory. So at the end, we just go through each of our `SaveFeatures` object and close it:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +1168,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combine loss"
+    "### Style transfer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Style transfer is adding content loss and style loss together with some weight."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our combined loss is the MSE loss at one particular layer, our style loss at all of our layers, sum up the style losses, add them to the content loss, the content loss we are scaling. Actually the style loss, we scaled already by 1E6. So they are both scaled exactly the same. Add them together. Again, you could trying weighting the different style losses or you could maybe remove some of them, so this is the simplest possible version."
    ]
   },
   {
@@ -932,6 +1201,13 @@
     "    # style loss\n",
     "    style_loss = sum(losses)\n",
     "    return cnt_loss + style_loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train that."
    ]
   },
   {
